# binaryGAPcl

./: CMakeLists.txt  bitGap.cl  main.cpp  sum.cl
